--- a/src/components/projectmodal/ProjectModal.module.css
+++ b/src/components/projectmodal/ProjectModal.module.css
@@ -91,6 +91,13 @@ overflow-x: hidden;
   }
 
 
+  .nextPageButtonContainer{
+    display: flex;
+    width: 100%;
+    justify-content: flex-end;
+    align-items: center;
+    margin-top: 50px;
+  }
 
 
 
