--- a/src/styles/Contact.module.css
+++ b/src/styles/Contact.module.css
@@ -1,4 +1,16 @@
 
+
+  .myTechStack{
+    margin:auto;
+    border:2px solid;
+    border-radius: 8px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    font-weight:bolder;
+    font-size:xxx-large;
+    font-family:"DM Sans";
+    
+   
+  }
   .myTechStackContainerHeading{
     margin-top: 0px;
     margin: auto;
@@ -14,14 +26,21 @@
   }
 
    @media (max-width: 821px) {
-   
+    .myTechStack{
+        margin:auto;
+        border:2px solid;
+        border-radius: 8px;
+        box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+        font-weight:bolder;
+        font-size:xx-large;
+        font-family:"DM Sans";
+        
+      }
       .myTechStackContainerHeading{
         margin-top: 50px;
     margin: auto;
     text-align: center;
       }
-
-    
 
 
 
@@ -29,12 +48,21 @@
    }
 
    @media (max-width: 470px) {
-   
+ 
 
    }
 
    @media (max-width: 821px) {
-
+    .myTechStack{
+        margin:auto;
+        border:2px solid;
+        border-radius: 8px;
+        box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+        font-weight:bolder;
+        font-size:1.2em;
+        font-family:"DM Sans";
+        
+      }
       .myTechStackContainerHeading{
         margin-top: 50px;
     margin: auto;
