--- a/src/styles/aboutme.module.css
+++ b/src/styles/aboutme.module.css
@@ -54,7 +54,7 @@
         border-radius: 8px;
         box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
         font-weight:bolder;
-        font-size:xxx-large;
+        font-size:2.5em;
         font-family:"DM Sans";
         
        
@@ -167,7 +167,7 @@ backdrop-filter: blur(0px);
             border-radius: 8px;
             box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
             font-weight:bolder;
-            font-size:xx-large;
+            font-size:2.3em;
             font-family:"DM Sans";
             
           }
